--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -30,7 +31,7 @@
     "clsx": "^2.1.1",
     "collapsible": "^1.0.1",
     "firebase": "^11.3.1",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.4.7",
     "install": "^0.13.0",
     "jodit-react": "^5.2.15",
     "lottie-react": "^2.4.1",
@@ -40,6 +41,7 @@
     "npm": "^11.1.0",
     "npx": "^10.2.2",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
@@ -48,6 +50,7 @@
     "react-select-country-list": "^2.2.3",
     "react-table": "^7.8.0",
     "react-toastify": "^11.0.3",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.1",
     "shadcn": "^2.4.0-canary.9",
     "sidebar": "^1.0.2",
