--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "react-select": "^5.10.0",
     "react-select-country-list": "^2.2.3",
     "react-table": "^7.8.0",
