--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "collapsible": "^1.0.1",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.7",
+    "input-otp": "^1.4.2",
     "install": "^0.13.0",
     "jodit-react": "^5.2.15",
     "lottie-react": "^2.4.1",
